# analise-enem

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  analise_participante.py  analise_tri_final.py  meu_simulado.py  pyproject.toml  requirements.txt  run_analysis.sh  test_precisao.py  verificacao_analise.py  verificacao_tri.py  visualizacoes_analise.py
.streamlit/: config.toml
archived/: README.md  analise_participante.py  analise_tri_final.py  visualizacoes_analise.py
deleted/: README.md  analise_precisao.py  calculador_tri.py  check_2017.py  check_2018_lc.py  check_all_positions.py  check_lc_2016.py  check_lc_all.py  check_mt_2019.py  check_responses.py  config.py  diagnosticar_erros.py  explorar_areas_anos.py  gerar_contagem_provas.py  inspect_results.py  investigar_erros.py  investigate_lc_2020_detailed.py  investigate_problematic.py  verificacao_analise.py  verificacao_tri.py
docs/: DESCOBERTAS.md  GUIA_PROVAS.md  README.md  SCORE_RECALCULATION.md
examples/: README.md  analise_completa_2024.py  calcular_nota.py  calibrar_ano.py
microdados_limpos/2009/: ITENS_PROVA_2009.csv
microdados_limpos/2010/: ITENS_PROVA_2010.csv
microdados_limpos/2011/: ITENS_PROVA_2011.csv
microdados_limpos/2012/: ITENS_PROVA_2012.csv
microdados_limpos/2013/: ITENS_PROVA_2013.csv
microdados_limpos/2014/: ITENS_PROVA_2014.csv
microdados_limpos/2015/: ITENS_PROVA_2015.csv
microdados_limpos/2016/: ITENS_PROVA_2016.csv
microdados_limpos/2017/: ITENS_PROVA_2017.csv
microdados_limpos/2018/: ITENS_PROVA_2018.csv
microdados_limpos/2019/: ITENS_PROVA_2019.csv
microdados_limpos/2020/: ITENS_PROVA_2020.csv
microdados_limpos/2021/: ITENS_PROVA_2021.csv
microdados_limpos/2022/: ITENS_PROVA_2022.csv
relatorios/: .gitignore  README.md
src/: __init__.py
streamlit_app/: README.md  __init__.py  app.py  calculador.py  config.py  requirements.txt  styles.css
tests/: README.md  _utils.py  conftest.py  executar_testes_completos.py  executar_testes_tri.py  extrair_exemplos.py  extrair_exemplos_completos.py  gerar_exemplos_microdados.py  gerar_provas_problematicas.py  provas_problematicas.md  run_full_validation.py  suite_testes_completos.txt  suite_testes_tri.txt  test_lc_50char.py  test_mapeador_provas.py  test_module.py  test_utils.py  teste_final.py  validar_completo.py  validar_exemplos_microdados.py  validar_todos_anos.py
tools/: README.md  calibrar_com_mapeamento.py  calibrar_todos_anos.py  encontrar_exemplo.py  gerar_mapeamento_aplicacoes.py  limpar_microdados.py  validar_faixas.py  validar_mapeamento_2024.py
(+40 files in other folders)
